# gm2-outside-tree-tests

./: AUTHORS  Makefile.am  Makefile.in  README.md  configure  configure.ac  runme.in
shell/: compile-source  generate-source  rename-source.py
